-XX:TraceJumps is broken on Sparc

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P5
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b131
    • sparc

      The -XX:TraceJumps flag is broken on Sparc:

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/tmp/tohartma/hs-comp/hotspot/src/share/vm/runtime/stubRoutines.cpp:277), pid=21738, tid=0x0000000000000002
      # assert(buffer.insts_remaining() > 200) failed: increase code_size2
      #
      # JRE version: (9.0) (build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-tohartma_2015_07_23_22_43-b00 mixed mode solaris-sparc compressed oops)
      # Core dump will be written. Default location: /tmp/tohartma/hs-comp/jdk/test/closed/JTwork/scratch/core or core.21738
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- T H R E A D ---------------

      Current thread (0x0000000100119000): JavaThread "Unknown thread" [_thread_in_vm, id=2, stack(0xffffffff7ca00000,0xffffffff7cb00000)]

      Stack: [0xffffffff7ca00000,0xffffffff7cb00000], sp=0xffffffff7cafeff0, free space=1019k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x173e6a0] void VMError::report_and_die()+0x898
      V [libjvm.so+0xb19450] void report_vm_error(const char*,int,const char*,const char*)+0x70
      V [libjvm.so+0x15db494] void StubRoutines::initialize2()+0x194
      V [libjvm.so+0xddb7d8] int init_globals()+0x218
      V [libjvm.so+0x168782c] int Threads::create_vm(JavaVMInitArgs*,bool*)+0x2a4
      V [libjvm.so+0xf924f4] int JNI_CreateJavaVM_inner(JavaVM_**,void**,void*)+0xbc
      C [libjli.so+0xa5dc] InitializeJVM+0xfc
      C [libjli.so+0x813c] JavaMain+0x5c
      C [libc.so.1+0xe25fc] _lwp_start+0x8

      It seems like this flag was not used recently and since it is "develop" I think we could remove it.

            Assignee:
            Dmitrij Pochepko
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: