8132318: -XX:TraceJumps is broken on Sparc

Reviewed-by: kvn, thartmann